syntax = "proto3";

package bootstrap;

option go_package = "github.com/open-panoptes/opni/pkg/apis/bootstrap/v1";

service Bootstrap {
  rpc Join(BootstrapJoinRequest) returns (BootstrapJoinResponse);
  rpc Auth(BootstrapAuthRequest) returns (BootstrapAuthResponse);
}

message BootstrapJoinRequest {}

message BootstrapJoinResponse {
  map<string, bytes> Signatures = 1;
}

message BootstrapAuthRequest {
  string ClientID     = 1;
  bytes  ClientPubKey = 2;
  string Capability   = 3;
}

message BootstrapAuthResponse {
  bytes ServerPubKey = 1;
}
